fix: crash on legacy encode and keyboard autofocus